; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/bthidd/extr_bthidd.c_elapsed.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/bthidd/extr_bthidd.c_elapsed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i32, i32 }

@elapsed.last = internal global %struct.timeval zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @elapsed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @elapsed(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.timeval, align 8
  store i64 %0, i64* %3, align 8
  %5 = call i32 @gettimeofday(%struct.timeval* %4, i32* null)
  %6 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* getelementptr inbounds (%struct.timeval, %struct.timeval* @elapsed.last, i32 0, i32 0), align 8
  %9 = sub nsw i64 %7, %8
  %10 = load i64, i64* %3, align 8
  %11 = icmp sge i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = bitcast %struct.timeval* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 bitcast (%struct.timeval* @elapsed.last to i8*), i8* align 8 %13, i64 16, i1 false)
  store i64 1, i64* %2, align 8
  br label %15

14:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %15

15:                                               ; preds = %14, %12
  %16 = load i64, i64* %2, align 8
  ret i64 %16
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
